--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </div>
         </section>
         <section class="container">
+            <h3 style="font: size 28px; font-weight: 600; text-align: center;color: #3a3a3a; margin-bottom: 30px;">Popular Collection</h3>
             <div class="product-items">
                     <div class="card">
                         <div class="item">
@@ -229,6 +230,8 @@
                 </div>
                 
             </div>
+            <p style="color:#E02C6D
+            ; font-size: 16px; font-weight: 700;text-align: right;">See more <i class="fa-solid fa-arrow-right"></i></p>
         </section>
         <section class="banner-section">
             <div class="feature">
